--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hello 👋 I'm <b>Vaddi Jhancy</b>, Passionate about AI, Security, Cloud, and Emerging Tech 🌐 | Exploring the future through Cryptography, Data, and Development 💡</p>
+    <p>Hello 👋 I'm <b>Komal Gautam</b>, Passionate about Solid State Materials, Security, Cloud, and Emerging Tech 🌐 | Exploring the future through Cryptography, Data, and Development 💡</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="card">
-      <h3>🚀 Contact-to-Contactless Fingerprint Matching</h3>
+      <h3>🚀 YBCO Superconductor Synthesis</h3>
       <p>Built a contact-to-contactless fingerprint matching system using minutiae extraction, preprocessing, and optimization-based algorithms (Hough, Core Point, Genetic Algorithm).</p>
     </div>
     <div class="card">
