--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hello 👋 I'm <b>Komal Gautam</b>, Passionate about Solid State Materials, Security, Cloud, and Emerging Tech 🌐 | Exploring the future through Cryptography, Data, and Development 💡</p>
+    <p>Hello 👋 I'm <b>Komal Gautam</b>, Passionate about Solid State Materials , Thin Film Deposition, and Microfabrication 🌐 | Exploring the future through Cryptography, Data, and Development 💡</p>
   </section>
 
   <section id="projects">
