Update profile photo in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
   <aside class="profile-section">
     <section id="home">
-      <img src="2024JCS2040.jpeg" alt="My Photo" class="profile-photo">
+      <img src="komal_background.jpg" alt="My Photo" class="profile-photo">
       <div class="profile-info">  
         <h1>Vaddi Jhancy</h1>
         <p>M.tech in CyberSecurity | IIT Delhi </p>
