Update profile information and project details

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#projects">Projects</a>
       <a href="#education">Education</a>
       <a href="#Thesis">Research</a>
-      <a href="#Internships">Internships</a>
+      <!-- <a href="#Internships">Internships</a> -->
     </nav>
   </header>
 
@@ -27,14 +27,15 @@
     <section id="home">
       <img src="komal_background.jpg" alt="My Photo" class="profile-photo">
       <div class="profile-info">  
-        <h1>Vaddi Jhancy</h1>
-        <p>M.tech in CyberSecurity | IIT Delhi </p>
-        <p>BE in CSE | UCEOU | Osmania University</p>
-        <p>Hello 👋 I'm <b>Vaddi Jhancy</b>, Passionate about AI, Cyber-Security, Cloud, and Emerging Tech 🌐 | Exploring the future through Cryptography, Data, and Development 💡</p>
-        <p><b><a href="mailto:vaddijhancy2002@gmail.com"><i class="fas fa-envelope"></i> vaddijhancy2002@gmail.com</a></b></p>
-        <p><a href="https://github.com/Vaddi-Jhancy"><i class="fa-brands fa-github"></i> GitHub</a></p>
-        <p><a href="https://www.linkedin.com/in/vaddi-jhancy-6014a123b"><i class="fab fa-linkedin"></i> Linkedin</a></p>
-        <p>Languages: Telugu, English, Hindi, German(A1)</p>
+        <h1>KOMAL  GAUTAM</h1>
+        <p>M.tech in Solid State Materials | IIT Delhi </p>
+         <p>M.Sc. in Physics | University of Lucknow </p>
+        <p>BSc. in Physics & Chemistry | Isabella Thoburn P.G. College, Lucknow </p>
+        <p>Hello 👋 I'm <b>Komal Gautam</b>, passionate about thin films, synthesis, and microfabrication. I focus on exploring advanced deposition techniques and materials development to drive innovation in materials science and technology.</p>
+        <p><b><a href="mailto:kgautam8931@gmail.com"><i class="fas fa-envelope"></i> kgautam8931@gmail.com</a></b></p>
+        <p><a href="https://github.com/Komal-Gautam2150"><i class="fa-brands fa-github"></i> GitHub</a></p>
+        <p><a href="www.linkedin.com/in/komal-gautam-777617369"><i class="fab fa-linkedin"></i> Linkedin</a></p>
+        <p>Languages: Hindi, English, German(A1)</p>
         </section>
     </aside>
   </div>
@@ -49,65 +50,59 @@
         <section id="projects">
         <h2>Projects</h2>
         <div class="card">
-            <h3><i class="fas fa-fingerprint"></i> Contact-to-Contactless Fingerprint Matching</h3>
-            <p>Implemented a fingerprint recognition system linking contact-based and contactless fingerprints through minutiae extraction and alignment. 
+            <h3><i class="fas fa-fingerprint"></i> YBCO Superconductor Synthesis and Analysis </h3>
+            <p>- Collected and analyzed resistance vs temperature (R–T) data for YBCO pellets synthesized via solid-state reaction.- Processed cryogenic measurement datasets to determine superconducting transition temperature (Tc).
             <span class="hidden-content" style="display:none;">
-            Designed preprocessing for segmentation, enhancement, and orientation field computation. Applied Hough Transform, Core Point, and Genetic Algorithm matching for improved precision and robustness. Tools: Python, OpenCV, SciPy, and Scikit-Image.
+            - Skills: Data acquisition, experimental dataset analysis, statistical curve fitting, cryogenic measurement analytics.
             </span>
             </p>
             <button class="read-more-btn" onclick="toggleReadMore(this)"><i class="fa-solid fa-plus"></i> Read more</button>
         </div>
 
         <div class="card">
-            <h3>✍🏼 Online Signature Verification System</h3>
-            <p> Developed a biometric authentication system using dynamic signature features such as pen pressure, coordinates, and timestamps.
+            <h3>✍🏼 ZnO Thin Film Optical Characterization </h3>
+            <p> Measured and analyzed UV–Vis transmission spectra to extract band gap values.
             <span class="hidden-content" style="display:none;">
-            Implemented feature extraction using derivatives, polar transformations, and histograms, followed by Manhattan distance–based matching. Designed for accuracy and robustness in real-time signature verification using Python, NumPy, Pandas, and scikit-learn.
+             Skills: Spectral data analysis, optical band gap extraction.
             </span>
             </p>
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
         <div class="card">
-            <h3>👁️ Multi-Biometric Iris Recognition System (Deep Learning Approach)</h3>
-            <p>Built a CNN-based iris recognition system with preprocessing steps for localization and normalization. 
+            <h3>👁️  Fabrication of MOSFET and Hall Bar Test Structures using Photolithography </h3>
+            <p>A course project for "Fabrication Techniques of RF and Microwave Devices"- Fabricated thin-film transistor using a two-level lithography process.
             <span class="hidden-content" style="display:none;">
-            Implemented deep feature extraction and similarity matching using cosine and Euclidean metrics. Enhanced identification accuracy through fusion strategies—Highest Rank, Borda Count, and Logistic Regression. Developed using Python, TensorFlow, OpenCV, and NumPy.
+            - Fabricated Hall Bar Test structures for Electrical Characterization.-Techniques used: Cleanroom processing, RCA cleaning, Mask Aligner, Lithography, Metallization, Etching.
             </span>
             </p>
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
         <div class="card">
-            <h3>🌐  Network Traffic Analysis</h3>
-            <p>Analyzed large-scale network flows using probabilistic data structures (HyperLogLog, Count-Min Sketch, Bloom Filter) for traffic estimation and anomaly detection.</p>
+            <h3>🌐   Mask Design for Photolithography using CleWin Software </h3>
+            <p>  Designed photomasks for semiconductor device fabrication.</p>
             <span class="hidden-content" style="display:none;">
-            <p>Implemented preprocessing pipeline (segmentation, enhancement, distortion correction, orientation field computation) and extracted minutiae points.</p>
-            <p>Applied matching algorithms (Hough Transform, Core Point, Genetic Algorithm) and evaluated performance using accuracy, precision, recall, and F1-score.</p>
-            <p>Tools: Python, OpenCV, NumPy, SciPy, Scikit-Image, PyTorch, DEAP.</p>
+            <p></p>
             </span>
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
         <div class="card">
-            <h3>🎬 MovieZone | Movie Recommendation System </h3>
-            <p> Built a content-based movie recommender (TMDB dataset) & API with cosine similarity; developed Streamlit app with sentiment analysis and feedback integration.</p>
+            <h3> Ion Implantation Simulation in GaN   </h3>
+            <p>  Simulated hydrogen ion distribution in GaN using SRIM software.-Interpreted implantation profiles and extracted projected range for process optimization.</p>
             <span class="hidden-content" style="display:none;">
-            <p>Implemented preprocessing pipeline (segmentation, enhancement, distortion correction, orientation field computation) and extracted minutiae points.</p>
-            <p>Applied matching algorithms (Hough Transform, Core Point, Genetic Algorithm) and evaluated performance using accuracy, precision, recall, and F1-score.</p>
-            <p>Tools: Python, OpenCV, NumPy, SciPy, Scikit-Image, PyTorch, DEAP.</p>
+            <p>- Skills: Monte Carlo simulations, semiconductor process modeling, data visualization.</p>
             </span>
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
         <div class="card">
-            <h3>💻 Optimized Breast Cancer Detection</h3>
-            <p>Implemented predictive modeling using an ANN on the Breast Cancer Wisconsin dataset; achieved accurate classification of benign vs. malignant tumors.</p>
+            <h3>Transport Studies of Bismuth Thin Films </h3>
+            <p> Deposited Bi thin films using thermal evaporation. Performed resistivity and Hall effect measurements to extract carrier density.</p>
             <span class="hidden-content" style="display:none;">
-            <p>Implemented preprocessing pipeline (segmentation, enhancement, distortion correction, orientation field computation) and extracted minutiae points.</p>
-            <p>Applied matching algorithms (Hough Transform, Core Point, Genetic Algorithm) and evaluated performance using accuracy, precision, recall, and F1-score.</p>
-            <p>Tools: Python, OpenCV, NumPy, SciPy, Scikit-Image, PyTorch, DEAP.</p>
+            <p> Skills: Electrical transport data analysis, Hall effect interpretation.</p>
             </span>
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
 
-        <div class="card">
+        <!-- <div class="card">
             <h3>🧬 DNA-Based Secure Data Hiding System</h3>
             <p>
               Designed a DNA steganography-based data hiding system ensuring confidentiality, integrity, and authenticity of hidden messages.
@@ -126,29 +121,29 @@
             </span>
             </p>
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
-        </div>
+        </div> -->
         </section>
 
         <!-- Thesis -->
         <section id="Thesis">
         <h2>Thesis</h2>
-        <h3>💻 Future-Proof DNA Data Storage for Secure and Privacy-Preserving Cloud Applications</h3>
+        <h3>💻 Study Mode of Growth and Transport Characterization of Superconducting Epitaxial Nb Films</h3>
         <p>
-             Developing a secure DNA-based storage framework with Post-Quantum Cryptography and Homomorphic Encryption for quantum-resistant cloud operations. Incorporating hybrid error correction, blind steganography, and AI/ML-driven adaptive encoding to enhance reliability, security, and performance.
+             Study focuses on superconducting epitaxial niobium (110) thin films, aiming to optimize growth temperature and sputtering power.Goal is to produce high-quality films with enhanced superconducting properties.These Nb films will be used to create superconductor–antiferromagnet bilayers with Mn₃X (X = Pt, Ge). Transport measurements and proximity effects in these bilayers will explore changes in superconducting transition temperature and interface phenomena.
         </p>
         </section>
 
         <!-- Education -->
         <section id="education">
         <h2>Education</h2>
-        <h3>M.tech | CyberSecurity</h3><p>IIT Delhi | 2024 - Present </p>
-        <p><h3>Bachelor of Engineering | Computer Science and Engineering</h3>
-            University College of Engineering Osmania University | 2019 - 2023
-        </p>
+        <h3>M.tech in Solid State Materials</h3><p>IIT Delhi | 2024 - Present </p> 
+        <h3>M.Sc. in Physics</h3><p>University of Lucknow | 2021 - 2023 </p>
+        <p><h3>BSc. in Physics & Chemistry</h3>
+            Isabella Thoburn P.G. College, Lucknow| 2017 - 2020</p>
         </section>
 
         <!-- Internships -->
-        <section id="Internships">
+        <!-- <section id="Internships">
         <h2>Internships</h2>
         <p>
             <h3> Pyramid Skilltech Pvt Ltd | Tender Aggregation (Jun 2022- Jul 2022)</h3>
@@ -156,7 +151,7 @@
             <h3> Salesforce | SmartInternz (Virtual) (Jul 2022 - Sep 2022) </h3>
             <p> Completed Salesforce training on automation, security, and coding; accomplished sandbox tasks and earned multiple badges.</p>
         </p>
-        </section>
+        </section> -->
 
         <!-- Soft Skills -->
         <section>
@@ -182,8 +177,8 @@
 
   <footer>
     <!-- <p>© 2025 Vaddi Jhancy</p> -->
-    <p>&copy; <span id="year"></span> Vaddi Jhancy</p>
-    <p>🌏 Hyderabad, Telangana, India</p>
+    <p>&copy; <span id="year"></span> Komal Gautam</p>
+    <p>🌏 Lucknow, U.P., India</p>
   </footer>
 
   <script src="script.js"></script>
