--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
   <aside class="profile-section">
     <section id="home">
-      <img src="komal_background.jpg" alt="My Photo" class="profile-photo">
+      <img src="images2.webp" alt="My Photo" class="profile-photo">
       <div class="profile-info">  
         <h1>KOMAL  GAUTAM</h1>
         <p>M.tech in Solid State Materials | IIT Delhi </p>
