--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="container">
   <aside class="profile-section">
     <section id="home">
-      <img src="images2.webp" alt="My Photo" class="profile-photo">
+      <img src="mypic_new.jpg" alt="My Photo" class="profile-photo">
       <div class="profile-info">  
         <h1>KOMAL  GAUTAM</h1>
         <p>M.tech in Solid State Materials | IIT Delhi </p>
@@ -33,8 +33,8 @@
         <p>BSc. in Physics & Chemistry | Isabella Thoburn P.G. College, Lucknow </p>
         <p>Hello 👋 I'm <b>Komal Gautam</b>, passionate about thin films, synthesis, and microfabrication. I focus on exploring advanced deposition techniques and materials development to drive innovation in materials science and technology.</p>
         <p><b><a href="mailto:kgautam8931@gmail.com"><i class="fas fa-envelope"></i> kgautam8931@gmail.com</a></b></p>
-        <p><a href="https://github.com/Komal-Gautam2150"><i class="fa-brands fa-github"></i> GitHub</a></p>
-        <p><a href="www.linkedin.com/in/komal-gautam-777617369"><i class="fab fa-linkedin"></i> Linkedin</a></p>
+        <p><a href="https://www.linkedin.com/in/komal-gautam-777617369"><i class="fab fa-linkedin"></i> Linkedin</a></p>
+        <p><a href="https://orcid.org/0009-0001-1905-7061"><i class="fa-brands fa-github"></i> ORCiD</a></p>
         <p>Languages: Hindi, English, German(A1)</p>
         </section>
     </aside>
