--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="card">
-            <h3>✍🏼 ZnO Thin Film Optical Characterization </h3>
+            <h3> ZnO Thin Film Optical Characterization </h3>
             <p> Measured and analyzed UV–Vis transmission spectra to extract band gap values.
             <span class="hidden-content" style="display:none;">
              Skills: Spectral data analysis, optical band gap extraction.
@@ -69,7 +69,7 @@
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
         <div class="card">
-            <h3>👁️  Fabrication of MOSFET and Hall Bar Test Structures using Photolithography </h3>
+            <h3> Fabrication of MOSFET and Hall Bar Test Structures using Photolithography </h3>
             <p>A course project for "Fabrication Techniques of RF and Microwave Devices"- Fabricated thin-film transistor using a two-level lithography process.
             <span class="hidden-content" style="display:none;">
             - Fabricated Hall Bar Test structures for Electrical Characterization.-Techniques used: Cleanroom processing, RCA cleaning, Mask Aligner, Lithography, Metallization, Etching.
@@ -78,7 +78,7 @@
             <button class="read-more-btn" onclick="toggleReadMore(this)">Read more</button>
         </div>
         <div class="card">
-            <h3>🌐   Mask Design for Photolithography using CleWin Software </h3>
+            <h3>Mask Design for Photolithography using CleWin Software </h3>
             <p>  Designed photomasks for semiconductor device fabrication.</p>
             <span class="hidden-content" style="display:none;">
             <p></p>
