Update ORCiD icon in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Hello 👋 I'm <b>Komal Gautam</b>, passionate about thin films, synthesis, and microfabrication. I focus on exploring advanced deposition techniques and materials development to drive innovation in materials science and technology.</p>
         <p><b><a href="mailto:kgautam8931@gmail.com"><i class="fas fa-envelope"></i> kgautam8931@gmail.com</a></b></p>
         <p><a href="https://www.linkedin.com/in/komal-gautam-777617369"><i class="fab fa-linkedin"></i> Linkedin</a></p>
-        <p><a href="https://orcid.org/0009-0001-1905-7061"><i class="fa-brands fa-github"></i> ORCiD</a></p>
+        <p><a href="https://orcid.org/0009-0001-1905-7061"><i class="fa-brands fa-orcid"></i> ORCiD</a></p>
         <p>Languages: Hindi, English, German(A1)</p>
         </section>
     </aside>
